--- a/34.md
+++ b/34.md
@@ -21,7 +21,8 @@ Git repositories are hosted in Git-enabled servers, but their existence can be a
     ["name", "<human-readable project name>"],
     ["description", "brief human-readable project description>"],
     ["web", "<url for browsing>", ...], // a webpage url, if the git server being used provides such a thing
-    ["clone", "<url for git-cloning>", ...], // a url to be given to `git clone` so anyone can clone it
+    ["clone", "<url for git-cloning>", ...], // [DEPRECATED] a url to be given to `git clone` so anyone can clone it
+    ["remote", "<url for git remote repository>", ...], // a url to be given to `git remote add` so anyone can clone/pull/push to it
     ["relays", "<relay-url>", ...] // relays that this repository will monitor for patches and issues
     ["r", "<earliest-unique-commit-id>", "euc"]
     ["maintainers", "<other-recognized-maintainer>", ...]
